--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <script>
   const supabaseUrl = "BURAYA_SUPABASE_URL";
-  const supabaseKey = "BURAYA_PUBLISHABLE_KEY";
+  const supabaseKey = "sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH";
+
 
   const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
