--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <p id="status"></p>
 
 <script>
-  const supabaseUrl = "BURAYA_SUPABASE_URL";
+  const supabaseUrl = "https://gkrfcoyleewxrxbfdunq.supabase.co";
+
   const supabaseKey = "sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH";
 
 
