--- a/index.html
+++ b/index.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Gizli Etiraf Oyunu</title>
+  <meta charset="UTF-8" />
+  <title>Anonim Oyun</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
-<body style="font-family: Arial; text-align:center; margin-top:100px;">
+<body>
 
-<h2>Anonim Etiraf Göndər 💌</h2>
+<h2>Anonim Mesaj Göndər</h2>
 
-<input type="text" id="message" placeholder="Mesajınızı yazın" style="width:300px; padding:10px;"><br><br>
-<button onclick="sendMessage()" style="padding:10px 20px;">Göndər</button>
+<input type="text" id="name" placeholder="Adınızı yazın"><br><br>
+<textarea id="message" placeholder="Mesajınızı yazın"></textarea><br><br>
+<button id="sendBtn">Göndər</button>
 
 <p id="status"></p>
 
 <script>
   const supabaseUrl = "https://gkrfcoyleewxrxbfdunq.supabase.co";
-
   const supabaseKey = "sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH";
-
 
   const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-  async function sendMessage() {
+  document.getElementById("sendBtn").addEventListener("click", async () => {
+
+    const name = document.getElementById("name").value;
     const message = document.getElementById("message").value;
 
-    if (!message) {
-      document.getElementById("status").innerText = "Mesaj boş ola bilməz!";
+    if (!name || !message) {
+      document.getElementById("status").innerText = "Bütün xanaları doldurun!";
       return;
     }
 
     const { error } = await supabase
       .from("messages")
-      .insert([{ message: message }]);
+      .insert([{ name: name, message: message }]);
 
     if (error) {
-      document.getElementById("status").innerText = "Xəta baş verdi!";
+      document.getElementById("status").innerText = "Xəta: " + error.message;
     } else {
       document.getElementById("status").innerText = "Mesaj göndərildi!";
-      document.getElementById("message").value = "";
     }
-  }
+
+  });
 </script>
 
 </body>
