--- a/index.html
+++ b/index.html
@@ -10,45 +10,39 @@
 
 <input type="text" id="name" placeholder="Adınızı yazın"><br><br>
 <textarea id="message" placeholder="Mesajınızı yazın"></textarea><br><br>
-<button id="sendBtn">Göndər</button>
+<button onclick="sendMessage()">Göndər</button>
 
 <p id="status"></p>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script type="module">
+import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-<script>
-document.addEventListener("DOMContentLoaded", function() {
+const supabaseUrl = "https://gkrfcoyleewxrxbfdunq.supabase.co";
+const supabaseKey = "sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH";
 
-  const supabaseUrl = "https://gkrfcoyleewxrxbfdunq.supabase.co";
-  const supabaseKey = "sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH";
+const supabase = createClient(supabaseUrl, supabaseKey);
 
-  const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+window.sendMessage = async function() {
 
-  document.getElementById("sendBtn").addEventListener("click", async function() {
+  const name = document.getElementById("name").value;
+  const message = document.getElementById("message").value;
 
-    const name = document.getElementById("name").value;
-    const message = document.getElementById("message").value;
+  if (!name || !message) {
+    document.getElementById("status").innerText = "Bütün xanaları doldurun!";
+    return;
+  }
 
-    if (!name || !message) {
-      document.getElementById("status").innerText = "Bütün xanaları doldurun!";
-      return;
-    }
+  const { error } = await supabase
+    .from("messages")
+    .insert([{ name: name, message: message }]);
 
-    const { error } = await supabase
-      .from("messages")
-      .insert([{ name: name, message: message }]);
+  if (error) {
+    document.getElementById("status").innerText = "Xəta: " + error.message;
+  } else {
+    document.getElementById("status").innerText = "Mesaj göndərildi!";
+  }
 
-    if (error) {
-      document.getElementById("status").innerText = "Xəta: " + error.message;
-    } else {
-      document.getElementById("status").innerText = "Mesaj göndərildi!";
-      document.getElementById("name").value = "";
-      document.getElementById("message").value = "";
-    }
-
-  });
-
-});
+}
 </script>
 
 </body>
