--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ const supabaseKey = "sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH";
 
 const supabase = createClient(supabaseUrl, supabaseKey);
 
+const adminPassword = "service.2000"; // Gizli admin şifrən
+
+// 🔹 Mesaj göndərmə funksiyası
 window.sendMessage = async function() {
 
   const name = document.getElementById("name").value;
@@ -29,21 +32,3 @@ window.sendMessage = async function() {
 
   if (!name || !message) {
     document.getElementById("status").innerText = "Bütün xanaları doldurun!";
-    return;
-  }
-
-  const { error } = await supabase
-    .from("messages")
-    .insert([{ name: name, message: message }]);
-
-  if (error) {
-    document.getElementById("status").innerText = "Xəta: " + error.message;
-  } else {
-    document.getElementById("status").innerText = "Mesaj göndərildi!";
-  }
-
-}
-</script>
-
-</body>
-</html>
