--- a/index.html
+++ b/index.html
@@ -22,7 +22,63 @@ const supabaseKey = "sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH";
 
 const supabase = createClient(supabaseUrl, supabaseKey);
 
-const adminPassword = "service.2000"; // Gizli admin şifrən
+const adminPassword = "service.2000";
+
+// Mesaj göndərmə
+window.sendMessage = async function() {
+
+  const name = document.getElementById("name").value;
+  const message = document.getElementById("message").value;
+
+  if (!name || !message) {
+    document.getElementById("status").innerText = "Bütün xanaları doldurun!";
+    return;
+  }
+
+  const { error } = await supabase
+    .from("messages")
+    .insert([{ name: name, message: message }]);
+
+  if (error) {
+    document.getElementById("status").innerText = "Xəta: " + error.message;
+  } else {
+    document.getElementById("status").innerText = "Mesaj göndərildi!";
+  }
+}
+
+
+// 🔐 Admin yoxlaması (?kod=service.2000)
+const urlParams = new URLSearchParams(window.location.search);
+const kod = urlParams.get("kod");
+
+if (kod === adminPassword) {
+  loadMessages();
+}
+
+async function loadMessages() {
+  const { data, error } = await supabase
+    .from("messages")
+    .select("*")
+    .order("id", { ascending: false });
+
+  if (error) {
+    console.error(error);
+    return;
+  }
+
+  const container = document.createElement("div");
+  container.innerHTML = "<h2>Gələn Mesajlar:</h2>";
+
+  data.forEach(msg => {
+    const p = document.createElement("p");
+    p.textContent = msg.name + ": " + msg.message;
+    container.appendChild(p);
+  });
+
+  document.body.appendChild(container);
+}
+</script>
+
 
 // 🔹 Mesaj göndərmə funksiyası
 window.sendMessage = async function() {
