--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>KREDIT | Oyun Sistemi</title>
+<title>Sürətli və Təhlükəsiz</title>
 
 <style>
 *{
@@ -15,7 +15,7 @@
 
 body{
   min-height:100vh;
-  background: linear-gradient(-45deg, #0f2027, #203a43, #2c5364, #1e3c72);
+  background: linear-gradient(-45deg, #0f2027, #203a43, #1e3c72, #2a5298);
   background-size:400% 400%;
   animation: gradientBG 12s ease infinite;
   color:white;
@@ -33,12 +33,9 @@ header{
   justify-content:space-between;
   align-items:center;
   padding:20px 8%;
-}
-
-.logo{
-  font-size:22px;
-  font-weight:700;
-  letter-spacing:2px;
+  font-size:20px;
+  font-weight:600;
+  letter-spacing:1px;
 }
 
 .hero{
@@ -49,79 +46,78 @@ header{
   flex-wrap:wrap;
 }
 
+/* LEFT TEXT */
 .hero-left{
   max-width:500px;
 }
 
 .hero-left h1{
-  font-size:48px;
-  margin-bottom:20px;
+  font-size:52px;
+  font-weight:700;
 }
 
-.hero-left p{
-  font-size:18px;
-  opacity:0.8;
-  margin-bottom:30px;
+/* PHONE MOCKUP */
+.phone{
+  width:300px;
+  height:600px;
+  background:#111;
+  border-radius:40px;
+  padding:20px;
+  position:relative;
+  box-shadow:0 30px 60px rgba(0,0,0,0.6);
+  animation: floatPhone 5s ease-in-out infinite;
 }
 
-.card-box{
-  background: rgba(255,255,255,0.08);
-  backdrop-filter: blur(15px);
-  padding:25px;
-  border-radius:20px;
-  width:320px;
-  box-shadow:0 20px 40px rgba(0,0,0,0.4);
-  animation: floatCard 4s ease-in-out infinite;
-}
-
-@keyframes floatCard{
+@keyframes floatPhone{
   0%{transform:translateY(0px)}
-  50%{transform:translateY(-15px)}
+  50%{transform:translateY(-20px)}
   100%{transform:translateY(0px)}
 }
 
-.card-box h3{
-  margin-bottom:15px;
-  font-weight:500;
-}
-
-input{
+.screen{
+  background: linear-gradient(135deg,#1e3c72,#2a5298);
   width:100%;
-  padding:12px;
-  margin-bottom:12px;
-  border:none;
-  border-radius:10px;
-  outline:none;
-}
-
-.row{
+  height:100%;
+  border-radius:25px;
+  padding:25px;
   display:flex;
-  gap:10px;
+  align-items:center;
+  justify-content:center;
 }
 
-button{
-  width:100%;
-  padding:14px;
-  border:none;
-  border-radius:10px;
-  background:#00c6ff;
+/* GAME CARD */
+.game-card{
+  width:220px;
+  height:140px;
+  background: linear-gradient(135deg,#00c6ff,#0072ff);
+  border-radius:20px;
+  padding:20px;
   color:white;
+  box-shadow:0 15px 30px rgba(0,0,0,0.4);
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+}
+
+.game-card h3{
+  font-size:18px;
+  letter-spacing:2px;
+}
+
+.code{
+  font-size:28px;
   font-weight:bold;
-  cursor:pointer;
-  transition:0.3s;
+  letter-spacing:3px;
 }
 
-button:hover{
-  background:#0072ff;
-}
-
+/* RESPONSIVE */
 @media(max-width:900px){
   .hero{
     flex-direction:column;
     text-align:center;
   }
 
-  .card-box{
+  .phone{
     margin-top:40px;
   }
 }
@@ -131,27 +127,22 @@ button:hover{
 <body>
 
 <header>
-  <div class="logo">KREDIT</div>
+  Sürətli və Təhlükəsiz
 </header>
 
 <section class="hero">
 
   <div class="hero-left">
-    <h1>Yeni Nəsil Oyun Kart Sistemi</h1>
-    <p>Oyun kart nömrəsini daxil edin və sistemə qoşulun. Təhlükəsiz və sürətli.</p>
+    <h1>Sürətli və Təhlükəsiz</h1>
   </div>
 
-  <div class="card-box">
-    <h3>Oyun Kart Məlumatı</h3>
-
-    <input type="text" placeholder="Kart üzərindəki 16 rəqəm">
-
-    <div class="row">
-      <input type="text" placeholder="MM/YY">
-      <input type="text" placeholder="CVV">
+  <div class="phone">
+    <div class="screen">
+      <div class="game-card">
+        <h3>KREDIT</h3>
+        <div class="code">2356M</div>
+      </div>
     </div>
-
-    <button>Daxil Et</button>
   </div>
 
 </section>
