--- a/index.html
+++ b/index.html
@@ -10,115 +10,154 @@
   margin:0;
   padding:0;
   box-sizing:border-box;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'SF Pro Display', sans-serif;
 }
 
 body{
   min-height:100vh;
-  background: linear-gradient(-45deg, #0f2027, #203a43, #1e3c72, #2a5298);
-  background-size:400% 400%;
-  animation: gradientBG 12s ease infinite;
+  background: radial-gradient(circle at 20% 30%, rgba(0,198,255,0.3), transparent 40%),
+              radial-gradient(circle at 80% 70%, rgba(0,114,255,0.4), transparent 40%),
+              linear-gradient(135deg,#0f2027,#203a43,#1e3c72);
+  background-size:cover;
   color:white;
-  overflow-x:hidden;
-}
-
-@keyframes gradientBG{
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
+  display:flex;
+  flex-direction:column;
 }
 
 header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
   padding:20px 8%;
   font-size:20px;
   font-weight:600;
-  letter-spacing:1px;
 }
 
 .hero{
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:60px 8%;
-  flex-wrap:wrap;
-}
-
-/* LEFT TEXT */
-.hero-left{
-  max-width:500px;
-}
-
-.hero-left h1{
-  font-size:52px;
-  font-weight:700;
-}
-
-/* PHONE MOCKUP */
-.phone{
-  width:300px;
-  height:600px;
-  background:#111;
-  border-radius:40px;
-  padding:20px;
-  position:relative;
-  box-shadow:0 30px 60px rgba(0,0,0,0.6);
-  animation: floatPhone 5s ease-in-out infinite;
-}
-
-@keyframes floatPhone{
-  0%{transform:translateY(0px)}
-  50%{transform:translateY(-20px)}
-  100%{transform:translateY(0px)}
-}
-
-.screen{
-  background: linear-gradient(135deg,#1e3c72,#2a5298);
-  width:100%;
-  height:100%;
-  border-radius:25px;
-  padding:25px;
+  flex:1;
   display:flex;
   align-items:center;
   justify-content:center;
+  padding:40px;
 }
 
-/* GAME CARD */
-.game-card{
-  width:220px;
-  height:140px;
-  background: linear-gradient(135deg,#00c6ff,#0072ff);
+/* iPhone Frame */
+.phone{
+  width:340px;
+  height:680px;
+  background:#000;
+  border-radius:45px;
+  padding:18px;
+  box-shadow:0 40px 80px rgba(0,0,0,0.6);
+  position:relative;
+}
+
+/* Notch */
+.phone::before{
+  content:"";
+  position:absolute;
+  top:10px;
+  left:50%;
+  transform:translateX(-50%);
+  width:160px;
+  height:28px;
+  background:#111;
+  border-radius:20px;
+}
+
+.screen{
+  background:linear-gradient(135deg,#1e3c72,#2a5298);
+  height:100%;
+  border-radius:35px;
+  padding:30px 20px;
+  overflow:hidden;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+}
+
+/* Card Flip Container */
+.card-container{
+  perspective:1000px;
+  margin-bottom:30px;
+}
+
+.card{
+  width:100%;
+  height:180px;
+  position:relative;
+  transform-style:preserve-3d;
+  transition:transform 0.8s;
+}
+
+.card.flip{
+  transform:rotateY(180deg);
+}
+
+.card-face{
+  position:absolute;
+  width:100%;
+  height:100%;
+  backface-visibility:hidden;
   border-radius:20px;
   padding:20px;
-  color:white;
-  box-shadow:0 15px 30px rgba(0,0,0,0.4);
   display:flex;
   flex-direction:column;
   justify-content:space-between;
 }
 
-.game-card h3{
-  font-size:18px;
-  letter-spacing:2px;
+.front{
+  background:linear-gradient(135deg,#00c6ff,#0072ff);
 }
 
-.code{
-  font-size:28px;
-  font-weight:bold;
+.back{
+  background:linear-gradient(135deg,#0072ff,#00c6ff);
+  transform:rotateY(180deg);
+  align-items:flex-end;
+}
+
+.card-number{
   letter-spacing:3px;
+  font-size:18px;
 }
 
-/* RESPONSIVE */
-@media(max-width:900px){
-  .hero{
-    flex-direction:column;
-    text-align:center;
-  }
+.card-code{
+  font-size:26px;
+  font-weight:bold;
+}
 
+/* Inputs */
+input{
+  width:100%;
+  padding:12px;
+  border:none;
+  border-radius:12px;
+  margin-bottom:12px;
+  outline:none;
+  font-size:14px;
+}
+
+.row{
+  display:flex;
+  gap:10px;
+}
+
+button{
+  width:100%;
+  padding:14px;
+  border:none;
+  border-radius:12px;
+  background:#00c6ff;
+  color:white;
+  font-weight:bold;
+  cursor:pointer;
+  transition:0.3s;
+}
+
+button:hover{
+  background:#0072ff;
+}
+
+@media(max-width:500px){
   .phone{
-    margin-top:40px;
+    transform:scale(0.9);
   }
 }
 </style>
@@ -126,26 +165,67 @@ header{
 
 <body>
 
-<header>
-  Sürətli və Təhlükəsiz
-</header>
+<header>Sürətli və Təhlükəsiz</header>
 
-<section class="hero">
-
-  <div class="hero-left">
-    <h1>Sürətli və Təhlükəsiz</h1>
-  </div>
+<div class="hero">
 
   <div class="phone">
     <div class="screen">
-      <div class="game-card">
-        <h3>KREDIT</h3>
-        <div class="code">2356M</div>
+
+      <div class="card-container">
+        <div class="card" id="gameCard">
+
+          <div class="card-face front">
+            <div>KREDIT</div>
+            <div class="card-number" id="previewNumber">•••• •••• •••• ••••</div>
+            <div class="card-code" id="previewCode">2356M</div>
+          </div>
+
+          <div class="card-face back">
+            <div>CVV: <span id="previewCVV">•••</span></div>
+          </div>
+
+        </div>
       </div>
+
+      <input type="text" maxlength="19" placeholder="16 rəqəm oyun kartı"
+       oninput="updateNumber(this.value)">
+
+      <div class="row">
+        <input type="text" maxlength="5" placeholder="MM/YY">
+        <input type="text" maxlength="3" placeholder="CVV"
+         onfocus="flipCard(true)"
+         onblur="flipCard(false)"
+         oninput="updateCVV(this.value)">
+      </div>
+
+      <button>Təsdiqlə</button>
+
     </div>
   </div>
 
-</section>
+</div>
+
+<script>
+function updateNumber(val){
+  document.getElementById("previewNumber").innerText =
+    val ? val : "•••• •••• •••• ••••";
+}
+
+function updateCVV(val){
+  document.getElementById("previewCVV").innerText =
+    val ? val : "•••";
+}
+
+function flipCard(state){
+  const card = document.getElementById("gameCard");
+  if(state){
+    card.classList.add("flip");
+  } else {
+    card.classList.remove("flip");
+  }
+}
+</script>
 
 </body>
 </html>
