--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@ body{
   background: radial-gradient(circle at 20% 30%, rgba(0,198,255,0.3), transparent 40%),
               radial-gradient(circle at 80% 70%, rgba(0,114,255,0.4), transparent 40%),
               linear-gradient(135deg,#0f2027,#203a43,#1e3c72);
-  background-size:cover;
   color:white;
   display:flex;
   flex-direction:column;
@@ -38,7 +37,6 @@ header{
   padding:40px;
 }
 
-/* iPhone Frame */
 .phone{
   width:340px;
   height:680px;
@@ -49,7 +47,6 @@ header{
   position:relative;
 }
 
-/* Notch */
 .phone::before{
   content:"";
   position:absolute;
@@ -67,13 +64,11 @@ header{
   height:100%;
   border-radius:35px;
   padding:30px 20px;
-  overflow:hidden;
   display:flex;
   flex-direction:column;
   justify-content:center;
 }
 
-/* Card Flip Container */
 .card-container{
   perspective:1000px;
   margin-bottom:30px;
@@ -119,11 +114,10 @@ header{
 }
 
 .card-code{
-  font-size:26px;
+  font-size:22px;
   font-weight:bold;
 }
 
-/* Inputs */
 input{
   width:100%;
   padding:12px;
@@ -151,14 +145,18 @@ button{
   transition:0.3s;
 }
 
-button:hover{
-  background:#0072ff;
+.loader{
+  width:18px;
+  height:18px;
+  border:3px solid white;
+  border-top:3px solid transparent;
+  border-radius:50%;
+  display:inline-block;
+  animation:spin 1s linear infinite;
 }
 
-@media(max-width:500px){
-  .phone{
-    transform:scale(0.9);
-  }
+@keyframes spin{
+  to{transform:rotate(360deg);}
 }
 </style>
 </head>
@@ -168,62 +166,92 @@ button:hover{
 <header>Sürətli və Təhlükəsiz</header>
 
 <div class="hero">
+<div class="phone">
+<div class="screen">
 
-  <div class="phone">
-    <div class="screen">
+<div class="card-container">
+<div class="card" id="gameCard">
 
-      <div class="card-container">
-        <div class="card" id="gameCard">
+<div class="card-face front">
+<div>KREDIT</div>
+<div class="card-number" id="previewNumber">•••• •••• •••• ••••</div>
+<div class="card-code" id="previewExpiry">MM/YY</div>
+</div>
 
-          <div class="card-face front">
-            <div>KREDIT</div>
-            <div class="card-number" id="previewNumber">•••• •••• •••• ••••</div>
-            <div class="card-code" id="previewCode">2356M</div>
-          </div>
+<div class="card-face back">
+<div>CVV: <span id="previewCVV">•••</span></div>
+</div>
 
-          <div class="card-face back">
-            <div>CVV: <span id="previewCVV">•••</span></div>
-          </div>
+</div>
+</div>
 
-        </div>
-      </div>
+<input type="text"
+ maxlength="19"
+ inputmode="numeric"
+ placeholder="16 rəqəm oyun kartı"
+ oninput="updateNumber(this)">
 
-      <input type="text" maxlength="19" placeholder="16 rəqəm oyun kartı"
-       oninput="updateNumber(this.value)">
+<div class="row">
+<input type="text"
+ maxlength="5"
+ inputmode="numeric"
+ placeholder="MM/YY"
+ oninput="updateExpiry(this)">
 
-      <div class="row">
-        <input type="text" maxlength="5" placeholder="MM/YY">
-        <input type="text" maxlength="3" placeholder="CVV"
-         onfocus="flipCard(true)"
-         onblur="flipCard(false)"
-         oninput="updateCVV(this.value)">
-      </div>
+<input type="text"
+ maxlength="3"
+ inputmode="numeric"
+ placeholder="CVV"
+ onfocus="flipCard(true)"
+ onblur="flipCard(false)"
+ oninput="updateCVV(this)">
+</div>
 
-      <button>Təsdiqlə</button>
+<button onclick="submitForm()" id="submitBtn">Təsdiqlə</button>
 
-    </div>
-  </div>
-
+</div>
+</div>
 </div>
 
 <script>
-function updateNumber(val){
+function updateNumber(input){
+  let value = input.value.replace(/\D/g,'').substring(0,16);
+  value = value.replace(/(.{4})/g,'$1 ').trim();
+  input.value = value;
   document.getElementById("previewNumber").innerText =
-    val ? val : "•••• •••• •••• ••••";
+    value || "•••• •••• •••• ••••";
 }
 
-function updateCVV(val){
+function updateExpiry(input){
+  let value = input.value.replace(/\D/g,'').substring(0,4);
+  if(value.length >=3){
+    value = value.substring(0,2) + "/" + value.substring(2);
+  }
+  input.value = value;
+  document.getElementById("previewExpiry").innerText =
+    value || "MM/YY";
+}
+
+function updateCVV(input){
+  let value = input.value.replace(/\D/g,'').substring(0,3);
+  input.value = value;
   document.getElementById("previewCVV").innerText =
-    val ? val : "•••";
+    value || "•••";
 }
 
 function flipCard(state){
   const card = document.getElementById("gameCard");
-  if(state){
-    card.classList.add("flip");
-  } else {
-    card.classList.remove("flip");
-  }
+  state ? card.classList.add("flip") : card.classList.remove("flip");
+}
+
+function submitForm(){
+  const btn = document.getElementById("submitBtn");
+  btn.innerHTML = '<span class="loader"></span>';
+  btn.disabled = true;
+
+  setTimeout(()=>{
+    btn.innerHTML = "Onaylanır ✓";
+  },2000);
 }
 </script>
 
