--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@ oninput="updateBack(this.value)">
 <script type="module">
 import { createClient } from "https://esm.sh/@supabase/supabase-js@2"
 
-const supabaseUrl = "BURAYA_URL"
-const supabaseKey = "BURAYA_KEY"
+const supabaseUrl = "https://gkrfcoyleewxrxbfdunq.supabase.co"
+const supabaseKey = "sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH"
 const supabase = createClient(supabaseUrl, supabaseKey)
 
 window.formatMain = function(val){
